Responsive and Mobile Expirence: 1. Cleaned up some code 2. Fixed home screen background not big enough for larger screens 3. Home page is fully responsive + mobile friendly. (implemented categories filter as button to show and hide it on mobiles and small screens) 4. Navbar is now mobile friendly & responsive. 5. Product View Popup is responsive & mobile friendly.

--- a/src/app/core/components/bs-navbar/bs-navbar.component.css
+++ b/src/app/core/components/bs-navbar/bs-navbar.component.css
@@ -45,3 +45,10 @@ hr {
   font-size: 25px !important;  
   color: #ffbc00;  
 }
+
+@media screen and (max-width: 320px) and (min-height: 480px) and (max-height: 568px)
+{
+  .dropdown-menu {
+    font-size: 55%;
+  }
+}  
