--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -49,3 +49,21 @@
   color: #23272B;
   font-weight: 400;
 }
+
+@media screen and (min-width: 320px) and (max-width: 555px) {
+  .card-title {
+    font-size: 95%;
+  }
+}
+
+@media screen and (min-width: 555px) and (max-width: 576px) {
+  .card-title {
+    font-size: 90%;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .card-title {
+    font-size: 95%;
+  }
+}
+
