--- a/src/app/shopping/components/product-view/product-view.component.css
+++ b/src/app/shopping/components/product-view/product-view.component.css
@@ -34,3 +34,221 @@
   object-position: center !important;
   min-height: 0 !important;
 }
+
+/* Make it mobile responsive */
+
+@media screen and (max-width: 320px) and (min-height: 480px) and (max-height: 567px) {
+  .dlg {
+    font-size: 90%;
+    width: 200px;
+    height: 370px;
+  }
+  .dlg .description {
+    height: 100px;
+    overflow-y: auto;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 100px;
+  }
+
+  .dlg .product-price
+  {
+    color: #23272B;
+    line-height: 2em;
+    margin-top: 5px;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  
+  .dlg .product-title 
+  {
+    font-weight: 700;
+  }  
+}
+
+
+@media screen and (max-width: 425px) and (min-height: 568px) and (max-height: 667px) {
+  .dlg {
+    font-size: 90%;
+    width: 200px;
+    height: 440px;
+  }
+  .dlg .description {
+    height: 140px;
+    overflow-y: auto;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 140px;
+  }
+
+  .dlg .product-price
+  {
+    color: #23272B;
+    line-height: 2em;
+    margin-top: 5px;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  
+  .dlg .product-title 
+  {
+    font-weight: 700;
+  }    
+}
+
+@media screen and (max-width: 425px) and (min-height: 667px) and (max-height: 735px) {
+  .dlg {
+    font-size: 90%;
+    width: 220px;
+    height: 550px;
+  }
+  .dlg .description {
+    height: 180px;
+    overflow-y: auto;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 200px;
+  }
+
+  .dlg .product-price
+  {
+    color: #23272B;
+    line-height: 2em;
+    margin-top: 5px;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  
+  .dlg .product-title 
+  {
+    font-weight: 700;
+  }    
+}
+
+@media screen and (max-width: 425px) and (min-height: 736px) and (max-height: 811px) {
+  .dlg {
+    font-size: 90%;
+    width: 300px;
+    height: 600px;
+  }
+  .dlg .description {
+    height: 250px;
+    overflow-y: auto;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 220px;
+  }
+
+  .dlg .product-price
+  {
+    color: #23272B;
+    line-height: 2em;
+    margin-top: 5px;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  
+  .dlg .product-title 
+  {
+    font-weight: 700;
+  }    
+}
+
+@media screen and (max-width: 425px) and (min-height: 812px) and (max-height: 813px) {
+  .dlg {
+    font-size: 90%;
+    width: 250px;
+    height: 650px;
+  }
+  .dlg .description {
+    height: 260px;
+    overflow-y: auto;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 230px;
+  }
+
+  .dlg .product-price
+  {
+    color: #23272B;
+    line-height: 2em;
+    margin-top: 5px;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  
+  .dlg .product-title 
+  {
+    font-weight: 700;
+  }    
+}
+@media screen and (min-width: 425px) and (max-width: 767px) and (min-height: 672px) {
+  .dlg {
+    font-size: 90%;
+    width: 270px;
+    height: 560px;
+  }
+  .dlg .description {
+    height: 220px;
+    overflow-y: auto;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 180px;
+  }
+
+  .dlg .product-price
+  {
+    color: #23272B;
+    line-height: 2em;
+    margin-top: 5px;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  
+  .dlg .product-title 
+  {
+    font-weight: 700;
+  }    
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) and (min-height: 672px) {
+  .dlg {
+    font-size: 90%;
+    width: 500px;
+    height: 560px;
+  }
+  .dlg .description {
+    height: 220px;
+    overflow-y: auto;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 180px;
+  }
+
+  .dlg .product-price
+  {
+    color: #23272B;
+    line-height: 2em;
+    margin-top: 5px;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  
+  .dlg .product-title 
+  {
+    font-weight: 700;
+  }    
+}
