--- a/src/app/shopping/components/products/product-filter/product-filter.component.css
+++ b/src/app/shopping/components/products/product-filter/product-filter.component.css
@@ -1,9 +1,10 @@
 
 .sticky-top { 
+  display: inline-block;
   top: 80px;
   z-index: 999;
 }
- 
+
 .category-filter {
     font-weight: 700;
     font-size: 1.1em;
@@ -13,4 +14,48 @@
     background: linear-gradient(to bottom, rgba(252,234,187,1) 0%,rgba(252,205,77,1) 4%,rgba(252,205,77,1) 4%,rgba(252,205,77,1) 57%,rgba(255,188,0,1) 82%,rgba(71,71,71,1) 97%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#474747',GradientType=0 ); /* IE6-9 */
 }
-  
+
+.mobileHideCategories {
+  display: none;
+}
+.mobileCategoriesToggle {
+  margin-bottom: 5px;
+}
+
+@media screen and (min-width: 319px) and (min-height: 480px) and (max-height: 567px) {
+  .mobileCategoriesToggle {
+    font-size: 45%;
+  }
+  .mobileCategoriesButton {
+    font-size: 18px;
+  }    
+}
+@media screen and (min-width: 319px) and (min-height: 568px) and (max-height: 667px) {
+  .mobileCategoriesToggle {
+    font-size: 70%;
+  }
+  .mobileCategoriesButton {
+    font-size: 18px;
+  }    
+}
+
+@media screen and (max-width: 768px) {
+  .mobileCategoriesButton {
+    color: #ffbc00;
+    padding: 0.25rem 0.75rem;
+    line-height: 1;
+    background: transparent;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    border-color: #ffbc00;
+    margin-bottom: 5px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobileCategoriesButton {
+    display: none;
+  }
+  .mobileCategoriesToggle {
+    display: inline-block;
+  }
+}
