--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,13 +9,6 @@ $primary-color-hover: #23272B;
 body { 
   padding-top: 55px; 
   background-image: url('assets/main-bg.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-.hn {
-  background-image: url('assets/main-bg.jpg');
-  background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
